# xTomo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: example_xtomo.py
src/xtomo/: __init__.py  chord_masking.py  compare_brightness_emissivity.py  core_xray_emissivity.py  mask_cords.py  plot_core_emissivity.py  xtomo_mds.py
