[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name        = "xtomo"
version     = "0.1.0"
description = "Python tools for C-Mod XTOMO soft-x-ray tomographic analysis"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "mdsthin>=1.0",       # MDSplus thin-client Python bindings
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.4",
    "mypy>=1.10",
]

# ---------------------------------------------------------------------------
# Package discovery  (src layout + examples/)
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src", "."]
include = ["xtomo*", "examples*"]

# ---------------------------------------------------------------------------
# Command-line entry points
# ---------------------------------------------------------------------------
[project.scripts]
xtomo-emissivity = "xtomo.core_xray_emissivity:main"
xtomo-plot       = "xtomo.plot_core_emissivity:main"
xtomo-compare    = "xtomo.compare_brightness_emissivity:main"
xtomo-example    = "examples.example_xtomo:main"

# ---------------------------------------------------------------------------
# Ruff linter / formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["xtomo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version     = "3.10"
warn_return_any    = true
warn_unused_configs = true
ignore_missing_imports = true   # mdsthin has no stubs

# ---------------------------------------------------------------------------
# Pytest (if tests are added later)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
